--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+*
 body {
     background: #ffffff;
     font-family: 'Source Sans Pro', sans-serif;
@@ -866,7 +867,78 @@ footer .copyright-text {
 .social-icon li a:hover {
     background: #ffffff;
 }
+/*---------------------------------------
+   Register single page            
+-----------------------------------------*/
+#register {
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+  max-width: 700px;
+  width: 100%;
+  background: rgb(121, 8, 8);
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+ 
+}
 
+#register.body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background: rgb(130, 106, 251);
+} 
+#register.container{
+  position: relative;
+  max-width: 700px;
+  width: 100%;
+  background: white;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  
+}
+#register.container header{
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: 500;
+  text-align: center;
+  
+  
+}
+#register.container.form{
+  margin-top: 30px;
+}
+#register.container.form.input-box{
+  width: 100%;
+  margin-top: 20px;
+  
+  
+}
+#register.container.form.input-box label{
+  color: #333;
+}
+#register.container.form.input-box input{
+  position: relative;
+  height: 50px;
+  width: 100%;
+  outline: none;
+  font-size: 1rem;
+  color: #707070;
+  margin-top: 8px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 0 15px;
+}
+#register.container.form.form-button {
+  height: 100px;
+  width: 100%;
+}
 
 
 /*---------------------------------------
@@ -1011,5 +1083,6 @@ footer .copyright-text {
   }
 
 }
+
 
 
